--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Numbers</title>
   </head>
   <body>
     <p>11, 4, 41, 50, 7, 19, 8, 18, 2, 6, 43, 6, 20, 43, 2, 23, 12, 24, 31, 29</p>
@@ -12,11 +12,25 @@
     <button id="btn3" onclick="median()">Median</button>
     <p>Click the Explain button to know how to use the reduce method to find the mean.</p>
     <button id="btn4" onclick="explain()">Explain</button>
+    <hr>
   </body>
   <div id="explain" style="display:none">
+    <p>The Mean is the sum of the numbers divided by the amount of the numbers we have.</p>
     <p>We can use the Reduce method to let the computer calculate the sum of the numbers for us. The reduce() method executes a function which you provide on each member of the array resulting in single output value. </p>
-    <p>For instance, in order to calculate the sum of the numbers in the array, we need to create an function to add the each number to the sum variable. </p>
-    <p></p>
+    <p>For instance, in order to calculate the Mean of the numbers in the array, we need to calculate the sum first.</p>
+    <p>We need to create an function to add a particular number to the total variable</p>
+    <p>The example code for getSum() function will be
+      <br/>
+      <br/>function getSum(total, num)
+      <br/>{
+      <br/>  return total + num;
+      <br/>}
+      </p>
+    <p>Then we need to use the getSum() and apply it to the reduce() method for array to let it run for each member in the array to calculate the sum. </P>
+    <p>The sum can be calculated by the code : Num.reduce(getSum). And the Num represents the number array, it can be replaced by any array name you given.</p>
+    <p>After finding the sum of the numbers in the array we need to divided it by the amount of the numbers in the array, which can be calculated by the code: Num.length</p>
+    <p>So the Mean will can be calculated by code:  Num.reduce(getSum)/Num.length;</p>
+    <hr>
 </div>
   <script>
   var Num=[11,4,41,50,7,19,8,18,2,6,43,6,20,43,2,23,12,24,31,29];
@@ -26,7 +40,7 @@
   }
  function mean()
   {
-      mean = Num.reduce(getSum)/Num.length;
+      var mean = Num.reduce(getSum)/Num.length;
       var para = document.createElement("P");
       var text = document.createTextNode("The Mean is "+mean);
       para.appendChild(text);
