--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <p>In order to calculate the Mean of the numbers in the array, we need to calculate the sum first.</p>
     <p>We need to create an function to add a particular number to the total variable</p>
     <p>The example code for getSum() function will be
-      <br/>
+      <br/><i><b>
       <br/>function getSum(total, num)
       <br/>{
       <br/>  return total + num;
-      <br/>}
+      <br/>}</i></b>
       </p>
     <p>Then we need to use the getSum() and apply it to the reduce() method for array to let it run for <i><b>each member in the array</i></b> to calculate the sum. </P>
-    <p>The sum can be calculated by the code : Num.reduce(getSum). And the Num represents the number array, it can be replaced by any array name you given.</p>
-    <p>After finding the sum of the numbers in the array we need to divided it by the amount of the numbers in the array, which can be calculated by the code: Num.length</p>
-    <p>So the Mean will can be calculated by code:  Num.reduce(getSum)/Num.length;</p>
+    <p>The sum can be calculated by the code : <i><b>Num.reduce(getSum)</i></b>. And the Num represents the number array, it can be replaced by any array name you given.</p>
+    <p>After finding the sum of the numbers in the array we need to divided it by the amount of the numbers in the array, which can be calculated by the code: <i><b>Num.length</i></b></p>
+    <p>So the Mean will can be calculated by code:  <i><b>Num.reduce(getSum)/Num.length;</i></b></p>
     <hr>
 </div>
   <script>
